Develop CaiusPupus Repport - first draft