@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.kandefromparis.shyrka</groupId>
     <artifactId>gcvp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.3</version>
     <packaging>jar</packaging>
     <scm>
         <connection>scm:git:git://github.com/kanedafomparisfriends/gcvp.git</connection>
-        <developerConnection>scm:git:git://kanedafomparisfriends/fabric8io/gcvp.git</developerConnection>
-        <url>git://github.com/kanedafomparisfriends/gcvp.git</url>
+        <developerConnection>scm:git:git://kanedafomparisfriends/gcvp.git</developerConnection>
+        <url>https://github.com/kanedafomparisfriends/gcvp.git</url>
     </scm>
     <issueManagement>
         <system>GitHub</system>
@@ -18,7 +18,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>        
-        <docker.maven.plugin.version>0.23.0</docker.maven.plugin.version>
+        <!-- docker.maven.plugin.version>0.23.0</docker.maven.plugin.version -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,14 +29,20 @@
     </properties>
     <dependencies>
         <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.8.0-beta1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.8.0-beta1</version>
         </dependency>
         <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-jdk14</artifactId>
-        <version>1.8.0-beta1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.8.0-beta1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
@@ -59,7 +65,7 @@
         <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-assertions</artifactId>
-            <version>3.0.8</version>
+            <version>3.0.11</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -74,12 +80,17 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.fabric8/kubernetes-server-mock -->
         <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-server-mock</artifactId>
             <version>3.1.8</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun</groupId>
+                    <artifactId>tools</artifactId>                    
+                </exclusion>
+            </exclusions>            
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -91,6 +102,7 @@
             <groupId>io.fabric8</groupId>
             <artifactId>openshift-server-mock</artifactId>
             <version>3.1.8</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -99,24 +111,65 @@
             <type>jar</type>
         </dependency>
         <dependency>
-	    <groupId>org.apache.commons</groupId>
-	    <artifactId>commons-email</artifactId>
-	    <version>1.3.3</version>
-	    <scope>test</scope>
-	</dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.3.3</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>3.5.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <!-- http://www.jsonschema2pojo.org/ 
+            @todo use it correctly
+            <plugin>
+                <groupId>org.jsonschema2pojo</groupId>
+                <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+                <version>1.0.0-alpha2</version>
+                <configuration>
+                    <sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
+                    <outputDirectory>${basedir}/src/main/java</outputDirectory>
+                    <targetPackage>io.github.kandefromparis.shyrka.projectchecker.model</targetPackage>
+                    
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.0</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -127,10 +180,11 @@
                     </archive>
                 </configuration>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.1</version>
+                
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -143,26 +197,92 @@
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>false</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
+                            <ignoredDependencies />
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <!-- plugin>
+            <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>${docker.maven.plugin.version}</version>
+                <version>0.26.0</version>
                 <extensions>true</extensions>
-                
-            </plugin -->
+                <configuration>
+                    <resources>
+                        <labels> 
+                            <!-- @Todo clarify the label stg -->
+                            <all> 
+                                <property> 
+                                    <name>artifactId</name>
+                                    <value>${project.artifactId}</value>
+                                </property>
+                                <property> 
+                                    <name>version</name>
+                                    <value>${project.version}</value>
+                                </property>
+                            </all>
+                        </labels>
+
+                        <annotations>          
+                        </annotations>
+                    </resources>
+                    <!--machine>
+                        <name>${project.artifactId}</name>
+                        <autoCreate>true</autoCreate>
+                        <createOptions>
+                            <driver>virtualbox</driver>
+                            <virtualbox-cpu-count>2</virtualbox-cpu-count>
+                        </createOptions>
+                    </machine-->
+                    <images>
+                        <image>                            
+                            <name>kanedafromparis/${project.artifactId}:${project.version}</name>
+                            <build> 
+                                <from>openjdk:10.0.1-jre-slim</from>
+                                <assembly>
+                                    <mode>dir</mode>
+                                    <targetDir>/opt/${project.artifactId}</targetDir>
+                                    <descriptor>../assembly/docker-assembly.xml</descriptor>
+                                </assembly>
+                                <maintainer></maintainer>
+                                <workdir>/opt/${project.artifactId}</workdir>
+                                <env>
+                                    <JVM_OPTIONS>-Djava.security.egd=file:/dev/./urandom 
+                                        -XX:+UnlockExperimentalVMOptions 
+                                        -XX:+UseCGroupMemoryLimitForHeap 
+                                        -XX:MaxRAMFraction=2 -XshowSettings:vm
+                                    </JVM_OPTIONS>                                    
+                                </env>
+                                <labels>
+                                    <io.github.kanedafromparisfriends-label-status>gcvp</io.github.kanedafromparisfriends-label-status>
+                                    <version>${project.version}</version>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                </labels>
+                                <entryPoint>
+                                    <shell>java $JVM_OPTIONS \
+                                        -cp .:lib \
+                                        -Djava.util.logging.config.file=./conf/logging.properties \
+                                        -jar /opt/${project.artifactId}/${project.artifactId}-${project.version}.jar \
+                                        -ephyra
+                                    </shell>                                    
+                                </entryPoint>
+                                
+                            </build>
+                          
+                            <!-- there is no run since it should work has a cron job -->
+                            <run />
+                        </image>
+                    </images>
+                </configuration>                
+            </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>fabric8-maven-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.5.30</version>
                 <executions>
                     <execution>
                         <id>fmp</id>
                         <goals>
-                            
                             <goal>resource</goal>
                             <goal>helm</goal>
                             <goal>build</goal>
@@ -202,7 +322,9 @@
                             <name>kanedafromparis/${project.artifactId}:${project.version}</name>
                             <build> 
                                 
-                                <from>openjdk:8-jre-alpine3.7</from> 
+                                <!-- from>openjdk:8-jre-alpine3.7</from-->
+                                <from>openjdk:10.0.1-jre-slim</from>
+ 
                                 <assembly>
                                     <mode>dir</mode>
                                     <targetDir>/opt/${project.artifactId}</targetDir>
